# rag-lab

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
docs/: phase-1-spec.md
src/rag_lab/: config.py
src/rag_lab/api/: main.py
src/rag_lab/graph/: builder.py  edges.py  nodes.py  state.py
src/rag_lab/ingestion/: pipeline.py
src/rag_lab/prompts/: answer.py  classify.py  grade.py  grounding.py
src/rag_lab/retrieval/: dense.py
src/rag_lab/ui/: app.py
tests/: conftest.py  test_api.py  test_edges.py  test_nodes.py
